# BaseProject-Template-Django-Allauth

./: .gitignore  MANIFEST.in  README.md  etup.cfg  pyproject.toml  setup.cfg
baseproject/: cli.py
baseproject/template/: .env  pyproject.toml  requirements.txt
baseproject/template/apps/pages/: views.py
baseproject/template/apps/user/: adapter.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
baseproject/template/apps/user/auth/: flow_fix.py
baseproject/template/apps/user/setting/: urls.py
baseproject/template/apps/user/utils/: converter.py
baseproject/template/core/: urls.py
baseproject/template/core/settings/: base.py  development.py
baseproject/template/src/: requirements.txt
baseproject/template/src/apps/user/: urls.py  views.py
baseproject/template/src/core/settings/: base.py  development.py  production.py
baseproject/template/templates/: base.html
django_base.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
