[project]
name = "django-baseproject"
version = "0.1.0"
dependencies = [
    "django",
    "django-allauth",
    "django-environ",
    "django-htmx",
    "django-livereload",
    "django-compressor",
    "pillow",
    "whitenoise",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
django-base = "baseproject.cli:create_project"