[project]
name = "django-baseproject"
version = "0.1.1"
summary = "This package is for base project setup with allauth(google, facebook) and custom setting structure"
author = "Jamal Blaquera"
author-email = "ugamedev08@gmail.com"
license = "MIT License"
dependencies = [
    "django",
    "django-allauth",
    "django-environ",
    "django-htmx",
    "django-livereload",
    "django-compressor",
    "pillow",
    "whitenoise",
    "requests",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
django-base = "baseproject.cli:create_project"