[project]
name = "django-baseproject"
version = "0.1.1"
description = "Base Django project template with allauth (Google, Facebook) and modular settings"
readme = "README.md"
license = "MIT"

authors = [
    { name = "Jamal Blaquera", email = "ugamedev08@gmail.com" }
]

dependencies = [
    "django>=4.2",
    "django-allauth",
    "django-environ",
    "django-htmx",
    "django-livereload",
    "django-compressor",
    "pillow",
    "whitenoise",
    "requests"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
django-base = "baseproject.cli:create_project"