[project]
name = "django-baseproject"
version = "0.1.0"
dependencies = [
    "django>=6.0.3",
    "django-allauth>=65.15.1",
    "django-environ>=0.13.0"
    "django-htmx>=1.27.0",
    "django-livereload>=1.7",
    "django-compressor>=4.6.0",
    "pillow>=12.2.0",
    "whitenoise>=6.12.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
django-base = "baseproject.cli:create_project"